c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_parse/bad_specifier.c
int main(void) {
  unsigned void *v; // you can't combine void with other type specifiers
  return 0;
}